--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -1,3 +1,5 @@
+@import "./_theme-colors.scss";
+@import "/node_modules/bootstrap/scss/bootstrap.scss";
 @import "./_variables.scss";
 
 body > * {
@@ -53,6 +55,15 @@ body {
     font-weight: 400;
     text-align: center;
   }
+
+  &__sponsored {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 70px;
+    color: $neutral-2;
+    justify-content: space-around;
+  }
 }
 
 .animal-selection {
@@ -86,7 +97,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    max-height: 600px;
+    max-height: 650px;
     height: 100%;
     padding: 30px;
   }
@@ -98,6 +109,7 @@ body {
     border: 1px solid $neutral-3;
     border-radius: 5px;
     background: #fff;
+    width: 100%;
   }
 
   &__input {
@@ -133,4 +145,8 @@ body {
       font-size: 72px;
     }
   }
+}
+
+.text-white-hover:hover {
+  color: white;
 }
